fix: 页面根链接为/blog时，页面不显示

--- a/docs/data/config.json
+++ b/docs/data/config.json
@@ -3,7 +3,7 @@
         {
             "name": "test",
             "time": "2020-10-29",
-            "url": "/article/test",
+            "url": "/test",
             "tags": ["test"]
         }
     ]
