--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "build-docs": "vue-cli-service build --dest docs",
+    "build": "vue-cli-service build --mode production --no-clean",
+    "build-docs": "vue-cli-service build --dest docs --mode production --no-clean",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
