--- a/docs/data/config.json
+++ b/docs/data/config.json
@@ -4,7 +4,91 @@
             "name": "test",
             "time": "2020-10-29",
             "url": "/test",
-            "tags": ["test"]
+            "tags": [
+                "test"
+            ]
+        },
+        {
+            "name": "微机原理简答",
+            "time": "2020-05-16",
+            "url": "/微机原理简答",
+            "tags": [
+                "专接本"
+            ]
+        },
+        {
+            "name": "6. 常用接口技术",
+            "time": "2020-05-01",
+            "url": "/常用接口技术",
+            "tags": [
+                "专接本"
+            ]
+        }
+    ],
+    "2019": [
+        {
+            "name": "数学公式",
+            "time": "2019-12-01",
+            "url": "/数学公式",
+            "tags": [
+                "专接本"
+            ]
+        },
+        {
+            "name": "3.1 指令系统",
+            "time": "2019-11-04",
+            "url": "/指令系统",
+            "tags": [
+                "专接本"
+            ]
+        },
+        {
+            "name": "5. 输入输出及中断技术",
+            "time": "2019-09-23",
+            "url": "/输入输出及中断技术",
+            "tags": [
+                "专接本"
+            ]
+        },
+        {
+            "name": "2. 80X88微处理器",
+            "time": "2019-09-23",
+            "url": "/80X88微处理器",
+            "tags": [
+                "专接本"
+            ]
+        },
+        {
+            "name": "4. 存储器系统",
+            "time": "2019-09-23",
+            "url": "/存储器系统",
+            "tags": [
+                "专接本"
+            ]
+        },
+        {
+            "name": "3.2 指令",
+            "time": "2019-09-20",
+            "url": "/指令",
+            "tags": [
+                "专接本"
+            ]
+        },
+        {
+            "name": "1. 微型计算机基础",
+            "time": "2019-09-05",
+            "url": "/微型计算机基础",
+            "tags": [
+                "专接本"
+            ]
+        },
+        {
+            "name": "无穷级数",
+            "time": "2019-08-22",
+            "url": "/无穷级数",
+            "tags": [
+                "专接本"
+            ]
         }
     ]
 }
