data: 更新文章，添加图片

--- a/docs/data/config.json
+++ b/docs/data/config.json
@@ -1,6 +1,14 @@
 {
     "2020": [
         {
+            "name": "世界，您好！",
+            "time": "2020-11-09",
+            "url": "/public/随记/博客建成随记",
+            "tags": [
+                "随记"
+            ]
+        },
+        {
             "name": "test",
             "time": "2020-10-29",
             "url": "/test",
