--- a/docs/data/config.json
+++ b/docs/data/config.json
@@ -1,4 +1,14 @@
 {
+    "2021": [
+        {
+            "name": "CommonMark",
+            "time": "2021-01-11",
+            "url": "/public/CommonMark/CommonMark",
+            "tags": [
+                "CommonMark"
+            ]
+        }
+    ],
     "2020": [
         {
             "name": "java基础",
